# TheraPy

./: .env.example  .gitignore  Dockerfile  Makefile  Pipfile  README.md  compose.yaml  config.json  docker-compose.yml  extra_installs.sh  pyproject.toml  repo2file.md  requirements.txt
.githooks/: commit-msg  pre-commit  pre-push
.githooks/lib/: no-attribution.sh
app/: __init__.py  integration_controller.py
app/chatbot/: chatbot_service.py
app/config/: __init__.py  config.py
app/services/chatbot/: __init__.py  chatbot_service.py
app/services/stt/: __init__.py  speech_to_text_service.py
app/services/tts/: __init__.py  text_to_speech_service.py
app/stt/: Dockerfile  speech_to_text_service.py  stt_service.py
app/tts/: text_to_speech_service.py  tts_service.py
app/types/: __init__.py  singletonmeta.py
app/ui/: Dockerfile  app_interface.py
app/utils/: hf-whisper-port.py
app/web/: app.py  main.py
app/web/flask_app/: __init__.py  flask_app.py
app/web/templates/: index.html  index2.html
data/: database.py
deploy/observability/: collector.yaml
deploy/observability/dashboards/: conversation-latency.json  persistence-memory.json  proactivity-push.json  reliability.json  research-pipeline.json  telemetry-health.json
deploy/observability/runbooks/: availability.md  capture.md  persistence.md  providers.md  resources.md
docs/: DEVELOPMENT.md  IMPLEMENTATION.md  PROJECT.md  SPEC.md  dev-quick-start.md  framework-spike.md  phase4-goal.md  phase4-impl-log.md  ux-companion-spec.md
docs/evidence/: field-tests-2026-07.md  observability-alert-drill.md  observability-backend-spike.md  observability-baseline.md  observability-evaluation.md  observability-handoff.md  observability-o3-coverage.md
scripts/: hostwatch.py  netcheck.py  phase1_dryrun.py  phase2_acceptance.py  phase4_acceptance.py  verify_longitudinal_loop.py  verify_memory_continuity.py  verify_relay_connectivity.py  verify_voice_text_loop.py  watchdog.py
scripts/observability/: backend_spike.md  backend_spike.py  backend_spike_langfuse.py  baseline.py  canary_scan.py  evaluate_behavior.py  evaluate_speech.py  experiment.py  fixture_hash.py  gen_dashboards.py  gen_interaction_fixtures.py  judge.py  phoenix_datasets.py  replay_interaction.py  report_io.py  snapshot_pipecat.py
src/therapy/: __init__.py  acceptance.py  agent.py  data.py
src/therapy/dialogue/: __init__.py  language_choice.py  modality.py  outreach.py  policy.py  proactive.py
src/therapy/integrations/: __init__.py
src/therapy/integrations/pipecat/: __init__.py  observability.py  pipeline.py  runtime.py
src/therapy/knowledge/: __init__.py  context.py  distill.py  embeddings.py  insight.py  research.py  research_ingest.py  schema.py  user_model.py
src/therapy/memory/: __init__.py  __main__.py  distill.py  store.py  summarizer.py
src/therapy/observability/: __init__.py  capture.py  config.py  context.py  exporters.py  health.py  interactions.py  journal.py  logging.py  metrics.py  model.py  replay.py  routing.py  telemetry.py
src/therapy/perception/: __init__.py  emotion.py  stt.py
src/therapy/server/: __init__.py  __main__.py  app.py  live.py  protocol.py  schemas.py
src/therapy/server/static/: app.js  companion.js  index.html  manifest.webmanifest  styles.css  sw.js
src/therapy/session/: __init__.py  timeline.py
src/therapy/speech/: __init__.py  tts.py
src/therapy/voice/: __init__.py  contracts.py  ports.py
tests/: conftest.py  test_agent.py  test_data_cli.py  test_health.py  test_hostwatch.py  test_language.py  test_language_choice.py  test_memory.py  test_policy.py  test_protocol.py  test_reliability.py  test_review_api.py  test_static.py  test_watchdog.py  type_contracts.py
tests/e2e/: conftest.py  test_pwa.py
tests/fixtures/observability/: canaries.json  classification.json
tests/fixtures/observability/behavior/: cases.json
tests/fixtures/observability/interactions/: anthropic_empty_output.json  anthropic_instream_error_after_200.json  anthropic_retry_then_success.json  anthropic_structured_output.json  anthropic_success.json  anthropic_tools.json  cancellation.json  ollama_error_body.json  ollama_success.json  openrouter_fallback_midstream_error.json  openrouter_http_error.json  openrouter_success.json  openrouter_truncation.json  partial_stream_disconnect.json  timeout.json
tests/fixtures/observability/speech/: cases.json
tests/nlp/: test_chatbot_service.py
tests/stt/: test_speech_to_text_service.py
tests/suites/e2e/: conftest.py  test_pwa.py
tests/suites/integration/: test_agent.py  test_app_negative_paths.py  test_client_telemetry.py  test_context.py  test_data_cli.py  test_distill.py  test_export_worker.py  test_graph_api.py  test_health.py  test_hostwatch.py  test_insight.py  test_interaction_capture.py  test_interaction_journal.py  test_memory.py  test_memory_tails.py  test_observability_logging.py  test_observability_provisioning.py  test_offer_api.py  test_outreach.py  test_phase4_acceptance.py  test_pipecat_capture.py  test_pipecat_emitted_spans.py  test_pipecat_frames.py  test_pipecat_metrics.py  test_pipecat_pipeline.py  test_pipecat_runtime.py  test_pipecat_snapshot.py  test_reliability.py  test_replay.py  test_research.py  test_review_api.py  test_route_policy.py  test_server_observability.py  test_static.py  test_telemetry_routing.py  test_user_model.py  test_watchdog.py
tests/suites/unit/: test_architecture.py  test_dialogue_transitions.py  test_evaluation_harness.py  test_evaluation_judge.py  test_future_boundaries.py  test_language.py  test_language_choice.py  test_metrics_manifest.py  test_modality.py  test_observability_config.py  test_observability_fixtures.py  test_observability_internals.py  test_observability_model.py  test_observability_routing.py  test_observability_schema.py  test_policy.py  test_policy_crisis_config.py  test_proactive.py  test_protocol.py
tests/tts/: test_text_to_speech_service.py  test_tts_service.py  test_tts_service_streaming.py
typings/faster_whisper/: __init__.pyi
typings/pytesseract/: __init__.pyi
typings/pywebpush/: __init__.pyi
(+10 files in other folders)
