[project]
name = "therapy"
version = "0.1.0"
description = "Voice-first personal assistant for self-understanding — CBT/OT-informed, emotion-aware."
authors = [{ name = "Juan Sugg", email = "juanpedrosugg@gmail.com" }]
license = { text = "MIT" }
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12,<3.14"
keywords = ["voice", "assistant", "speech", "emotion", "neurodiversity"]
dependencies = [
  "anthropic>=0.116.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28.1",
  "kokoro-onnx>=0.5.0",
  "lingua-language-detector>=2.1.1",  # phase 1: word-level reply-language choice (SPEC §7)
  "pipecat-ai[silero,webrtc,whisper]>=1.5.0",
  "requests>=2.34.2",
  "uvicorn[standard]>=0.30,<1.0",
]

# Phase-gated dependencies — added when their phase lands (docs/SPEC.md §9):
#   ser (speech emotion recognition)            — phase 3

[dependency-groups]
dev = [
  "pytest>=8,<10",
  "httpx>=0.27,<1.0",
  "ruff>=0.6",
  "pytest-playwright>=0.5",  # phase-1 PWA browser E2E (install + connect/transcript)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/therapy"]

[tool.pytest.ini_options]
testpaths = ["tests/suites"]
# Suites live under tests/suites/{unit,integration,e2e} and are auto-marked by
# folder (tests/conftest.py). Browser E2E is slow (real Chromium + a live server
# + model loading) and opt-in: the default gate skips it, `pytest -m e2e` runs
# only it, and `pytest -m e2e -k <name>` iterates on a subset.
addopts = ["-m", "not e2e"]
markers = [
    "unit: fast single-module tests, no external I/O (framework-free)",
    "integration: wire the app/DB/HTTP/CLI across components",
    "e2e: full browser end-to-end tests (Playwright)",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# `extend-select` keeps ruff's defaults (E4/E7/E9 + F) and adds import-sorting
# (I), pyupgrade (UP), bugbear (B), and pytest-style (PT). Deliberately NOT the
# full `E` set — E501 line-length is left unenforced to avoid reflowing prose.
extend-select = ["I", "UP", "B", "PT"]

[tool.ruff.lint.per-file-ignores]
# pytest-style rules target the test suites, not the standalone phase scripts.
"scripts/**" = ["PT"]
