[project]
name = "therapy"
version = "0.1.0"
description = "Voice-first personal assistant for self-understanding — CBT/OT-informed, emotion-aware."
authors = [{ name = "Juan Sugg", email = "juanpedrosugg@gmail.com" }]
license = { text = "MIT" }
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12,<3.14"
keywords = ["voice", "assistant", "speech", "emotion", "neurodiversity"]
dependencies = [
  "anthropic>=0.116.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28.1",
  "kokoro-onnx>=0.5.0",
  "lingua-language-detector>=2.1.1",  # phase 1: word-level reply-language choice (SPEC §7)
  "pipecat-ai[silero,webrtc,whisper]>=1.5.0",
  "requests>=2.34.2",
  "uvicorn[standard]>=0.30,<1.0",
]

# Phase-gated dependencies — added when their phase lands (docs/SPEC.md §9):
#   ser (speech emotion recognition)            — phase 3

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "httpx>=0.27,<1.0",
  "ruff>=0.6",
  "pytest-playwright>=0.5",  # phase-1 PWA browser E2E (install + connect/transcript)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/therapy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Browser E2E is slow (real Chromium + a live server + model loading) and opt-in.
# The default gate stays fast: `pytest` skips it, `pytest -m e2e` runs only it.
addopts = ["-m", "not e2e"]
markers = ["e2e: full browser end-to-end tests (Playwright)"]

[tool.ruff]
target-version = "py312"
line-length = 88
